--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,19 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <div>
+
     <div class="header">
         <app-header></app-header>
+    </div>
 
+    <div class="side-nav ">
+        <app-sidenav></app-sidenav>
+    </div>
+    <div class="main ">
+        <app-main></app-main>
+    </div>
+    <div class="footer">
+        <app-footer></app-footer>
     </div>
 </div>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
