--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,8 @@
     </div>
     <div class="main ">
         <app-main></app-main>
+    
+        <h1>My mother is {{firstName}}</h1>
     </div>
     <div class="footer">
         <app-footer></app-footer>
