--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,8 @@
     
         <h1>My mother is {{firstName}}</h1>
     </div>
+    <img [src]="imagepath" alt="">
+   
     <div class="footer">
         <app-footer></app-footer>
     </div>
