--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,27 +6,22 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<div>
 
-    <div class="header">
-        <app-header></app-header>
-    </div>
 
-    <div class="side-nav ">
-        <app-sidenav></app-sidenav>
+<div class="container">
+    <h2>Structual Directives -ngIf</h2>
+    <div class="row">
+        <div class="col-md-12">
+            <button class="btn btn-success" (click)="approve(true)">Approve</button>
+            <button class="btn btn-danger" (click)="approve(false)">Reject</button>
+        </div>
+        <div class="col-md-12">
+            <p *ngIf="isApproved">Your application has been approved</p>
+            <p *ngIf="!isApproved">Sorry , your application has been rejected</p>
+        </div>
     </div>
-    <div class="main ">
-        <app-main></app-main>
     
-        <h1>My mother is {{firstName}}</h1>
-    </div>
-    <img [src]="imagepath" alt=""/>
-   
-    <div class="footer">
-        <app-footer></app-footer>
-    </div>
-    <input type="text" (input)="passValueToComponent($event)"/>
-    <input type="text" [(ngModel)]="defaultVal"/> <h1>{{defaultVal}}</h1>
+
 </div>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
