--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,34 +1,17 @@
-.header {
-    width: 100%;
-    height: 100px;
-    background-color: #116466;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.container{
+    padding: 50px;
+    text-align: center;
+    height: 2000px;
 }
-.side-nav {
-    width: 25%;
-    height: calc(100vh - 200px);
-    background-color: #eaa96f;
-    float: left;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+h2{
+    margin: 40px;;
 }
-.main {
-    float: left;
-    width: 75%;
-    height: calc(100vh - 200px);
-    background-color: #ece6e2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.btn{
+    width: 130px;
+    margin: 20px;
 }
-.footer{
-    width: 100%;
-    height: 100px;
-    background-color: #2c3531;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+p{
+    font-size: 20px;
+    font-weight: bold;
 }
