--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,3 +15,15 @@ p{
     font-size: 20px;
     font-weight: bold;
 }
+.red-color{
+    color: white;
+    background-color: red;
+}
+.green-color{
+    color: white;
+    background-color: green;
+}
+.blue{
+    color: white;
+    background-color: blue;
+}
