--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,42 +9,23 @@
 
 
 <div class="container">
-    <h2>Structual Directives -ngIf</h2>
-    <div class="row">
-        <div class="col-md-12">
-            <button class="btn btn-success" (click)="approve(true)">Approve</button>
-            <button class="btn btn-danger" (click)="approve(false)">Reject</button>
-        </div>
-        <div class="col-md-12">
-            <p *ngIf="isApproved">Your application has been approved</p>
-            <p *ngIf="!isApproved">Sorry , your application has been rejected</p>
-        </div>
-    </div>
-    <hr>
-    <h2>Structual Directives -ngFor</h2>
-    <div class="row">
-        <div class="col-md-12">
-            <p *ngFor="let number of numbers;let i =index">{{i+1}}={{number}}</p>
-        </div>
-    </div>
-    <h2>Structual Directives -ngSwitch</h2>
-    <div class="row">
-        <div class="col-md-12">
-            <input type="number" name="luckynumber" [(ngModel)]="luckyNumber">
-        </div>
-        <div class="col-md-12" [ngSwitch]="luckyNumber">
-            <p *ngSwitchCase="1">Strong</p>
-            <p *ngSwitchCase="2">Weak</p>
-            <p *ngSwitchCase="3">Inteligent</p>
-            <p *ngSwitchCase="4">Fool</p>
-            <p *ngSwitchCase="5">Brave</p>
-            <p *ngSwitchDefault>Enter numbers from 1 to 5</p>
 
-
+    <div class="row">
+        <div class="col-md-12">
+            <p [ngClass]="{
+                'red-color':highlightColor=== 'red',
+                'green-color' : highlightColor=== 'green',
+                'blue' : highlightColor === 'blue'
+            }">Click any button to highlight me!</p>
+        </div>
+        <div class="col-md-12">
+            <button class="btn btn-danger" (click)="highlight('red')">Red</button>
+            <button class="btn btn-success" (click)="highlight('green')">Green</button>
+            <button class="btn btn-primary" (click)="highlight('blue')">Blue</button>
 
         </div>
     </div>
-
+    
 </div>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
