--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 
 <div class="container">
-
+ <h2>Attribute directives- ngClass</h2>
     <div class="row">
         <div class="col-md-12">
             <p [ngClass]="{
@@ -22,6 +22,19 @@
             <button class="btn btn-danger" (click)="highlight('red')">Red</button>
             <button class="btn btn-success" (click)="highlight('green')">Green</button>
             <button class="btn btn-primary" (click)="highlight('blue')">Blue</button>
+
+        </div>
+    </div>
+    <h2>Attribute directives- ngStyle</h2>
+    <div class="row">
+        <div class="col-md-12">
+            <p [ngStyle]="{
+                color:isStyleApplied===true?'white':'black',
+                backgroundColor:isStyleApplied ?'green':'white'
+            }">Click button to toggle the style</p>
+        </div>
+        <div class="col-md-12">
+            <button class="btn btn-primary" (click)="toggleStyle()">Toggle Style</button>
 
         </div>
     </div>
