Output Data child  component to parent Component

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,4 +1,5 @@
 <div>
     <h1>Child Component</h1>
     <p>My name is {{firstName}}</p>
+    <input type="text" (input)="sendMessageToParent($event)">
 </div>
