--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,5 +1,6 @@
 <div>
     <h1>Parent Component</h1>
     <input type="text" [(ngModel)]="firstNameInParent">
+    <p>{{msgFromChild}}</p>
 </div>
-<app-child [firstName]="firstNameInParent"></app-child>
+<app-child [firstName]="firstNameInParent" (sendMessageEmitter)="receiveMessage($event)"></app-child>
