--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,6 +1,3 @@
-<div>
-    <h1>Parent Component</h1>
-    <input type="text" [(ngModel)]="firstNameInParent">
-    <p>{{msgFromChild}}</p>
-</div>
-<app-child [firstName]="firstNameInParent" (sendMessageEmitter)="receiveMessage($event)"></app-child>
+<h1>Parent Componet</h1>
+<button (click)="toggleChild()">Toggle Child</button>
+<app-child *ngIf="isChild"></app-child>
